--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["shar <Sasha.sharai1998@mail.ru>"]
 python = "^3.9"
 Django = "^4.1.3"
 djangorestframework = "^3.14.0"
+python-dotenv = "^0.21.0"
 
 [tool.poetry.dev-dependencies]
 
