--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^4.1.3"
 djangorestframework = "^3.14.0"
 python-dotenv = "^0.21.0"
 djangorestframework-simplejwt = "^5.2.2"
+psycopg2-binary = "^2.9.5"
 
 [tool.poetry.dev-dependencies]
 
