--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - ./data/db:/var/lib/postgresql/data
     env_file:
      - .env.dev
+#    environment:
+#      POSTGRES_PASSWORD: postgres
     ports:
       - '5432:5432'
     expose:
