--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ djangorestframework-simplejwt = "^5.2.2"
 psycopg2-binary = "^2.9.5"
 
 [tool.poetry.dev-dependencies]
+pre-commit = "^2.20.0"
+isort = "^5.10.1"
+black = "^22.10.0"
+flake8 = "^5.0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
